# squatter-swatter

./: Cargo.toml  README.md  config.json  output.csv  output_0.csv  output_1.csv  run.sh  users.csv  users_sorted.csv
src/: config.rs  main.rs  pc.rs
